update language selector ui and padding

--- a/Kori/GlobalLogin.razor
+++ b/Kori/GlobalLogin.razor
@@ -38,7 +38,7 @@
                                 <div class="language-btn__wrapper">
                                     <img src="_content/Kori/icons/Language.svg" /> @Language?.DisplayName.ToString()
                                 </div>
-                                <img class="side-icon @(ShowLanguageSettings ? "rotate": "")" src="_content/Kori/icons/Side.svg" />
+                                <img class="side-icon @(ShowLanguageSettings ? "rotate": "")" src="_content/Kori/icons/Expand.svg" />
                             </button>
                             <LanguageSelector ShowLanguages="ShowLanguageSettings" />
                         </div>
@@ -60,7 +60,7 @@
                                     <div class="language-btn__wrapper">
                                         <img src="_content/Kori/icons/Language.svg" /> @Language?.DisplayName.ToString()
                                     </div>
-                                    <img class="side-icon @(ShowLanguageSettings ? "rotate": "")" src="_content/Kori/icons/Side.svg" />
+                                    <img class="side-icon @(ShowLanguageSettings ? "rotate": "")" src="_content/Kori/icons/Expand.svg" />
                                 </button>
                                 <LanguageSelector ShowLanguages="ShowLanguageSettings" />
                             </div>
@@ -81,7 +81,7 @@
                             </div>
                         </button>
                         <button class="login-component__btn language-btn" _="on click toggle .show on .login-component__language">
-                            <img src="icons/Language.svg" /> @Language?.DisplayName.ToString()
+                            <img src="_content/Kori/icons/Language.svg" /> @Language?.DisplayName.ToString()
                         </button>
                         <div class="login-menu__actions">
                             <button class="login-component__btn profile-btn">Profile</button>
@@ -90,7 +90,7 @@
                                 <div class="language-btn__wrapper">
                                     <img src="_content/Kori/icons/Language.svg" /> @Language?.DisplayName.ToString()
                                 </div>
-                                <img src="_content/Kori/icons/Side.svg" />
+                                <img src="_content/Kori/icons/Expand.svg" />
                             </button>
                             <LanguageSelector ShowLanguages="ShowLanguageSettings" />
                         </div>
