--- a/SparcFeatures/Blog/BlogTemplate.scss
+++ b/SparcFeatures/Blog/BlogTemplate.scss
@@ -1,5 +1,14 @@
-﻿.placeholder {
-    color: gray;
-    font-style: italic;
-    cursor: pointer;
+﻿.blog-post {
+    grid-column: 2/14;
+
+    .placeholder {
+        color: gray;
+        font-style: italic;
+        cursor: pointer;
+    }    
+
+    .content {
+        font-size: 1em;
+        line-height: 1.6;
+    }
 }
