--- a/Kori/GlobalLogin.razor.css
+++ b/Kori/GlobalLogin.razor.css
@@ -7,10 +7,6 @@
   position: absolute;
   top: 0;
   right: 16px;
-  font-family: "Encode Sans Semi Expanded" !important;
-  font-weight: 400;
-  line-height: 160%;
-  color: var(--grey-50) !important;
   z-index: 1000;
 }
 .login-component > * {
@@ -35,12 +31,12 @@
   padding: 8px 0 !important;
   background: none !important;
   border: none !important;
-  font-family: "Encode Sans Semi Expanded" !important;
-  color: var(--grey-50) !important;
-}
-.login-component__btn:hover {
-  background: none !important;
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
   color: white !important;
+  cursor: pointer;
 }
 .login-component .login-component__toggle {
   width: 24px;
@@ -84,19 +80,6 @@
   flex-direction: column;
   gap: 16px;
 }
-.login-component .login-menu__header {
-  color: var(--grey-50);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 160%;
-}
-.login-component .login-menu__header p {
-  font-family: "Encode Sans Expanded";
-  color: var(--grey-300);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 160%;
-}
 .login-component .login-menu__actions {
   width: 100%;
   display: flex;
@@ -122,56 +105,31 @@
   background: var(--grey-800) !important;
   transition: 300ms ease-in-out;
 }
-.login-component .login-menu__actions .login-btn:hover, .login-component .login-menu__actions .account-btn:hover {
-  background: var(--grey-700) !important;
-}
-.login-component .login-menu__actions .login-btn:active, .login-component .login-menu__actions .account-btn:active {
-  background: var(--grey-800) !important;
-}
 .login-component .login-menu__actions .login-btn__content, .login-component .login-menu__actions .account-btn__content {
   text-align: left !important;
-}
-.login-component .login-menu__actions .login-btn__content figcaption, .login-component .login-menu__actions .account-btn__content figcaption {
-  font-family: "Encode Sans Semi Expanded";
-  color: var(--grey-50);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 160%;
-}
-.login-component .login-menu__actions .login-btn__content aside, .login-component .login-menu__actions .account-btn__content aside {
-  font-family: "Encode Sans Expanded";
-  color: var(--grey-300);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 160%;
 }
 .login-component .login-menu__actions .language-btn {
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
-  transition: 300ms ease-in-out;
-}
-.login-component .login-menu__actions .language-btn:hover {
-  background: var(--grey-700) !important;
-}
-.login-component .login-menu__actions .language-btn:active {
-  background: var(--grey-900) !important;
 }
 .login-component .login-menu__actions .language-btn__wrapper {
   display: flex !important;
   align-items: center !important;
   gap: 14px !important;
-  font-family: "Encode Sans Expanded";
-  color: var(--grey-300);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 160%;
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: white !important;
+  opacity: 0.7 !important;
 }
-.login-component .login-menu__actions .language-btn .side-icon {
+.login-component .login-menu__actions .language-btn .expand-icon {
   transition: transform 1000ms ease-in-out;
+  opacity: 0.7;
 }
-.login-component .login-menu__actions .language-btn .side-icon.rotate {
-  transform: rotate(180deg);
+.login-component .login-menu__actions .language-btn .expand-icon.rotate {
+  transform: rotate(-180deg);
 }
 .login-component .login-menu__input {
   display: flex;
@@ -227,4 +185,36 @@
   100% {
     opacity: 1;
   }
+}
+.login-text__primary, .login-component .login-menu__header, .login-component .login-menu__actions .login-btn__content figcaption, .login-component .login-menu__actions .account-btn__content figcaption {
+  font-family: "Encode Sans Semi Expanded" !important;
+  font-size: 16px !important;
+  font-weight: 400 !important;
+  line-height: 160% !important;
+  color: var(--grey-50) !important;
+}
+
+.login-text__secondary, .login-component .login-menu__header p, .login-component .login-menu__actions .login-btn__content aside, .login-component .login-menu__actions .account-btn__content aside {
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: var(--grey-300) !important;
+}
+
+.login-text__btn, .login-component .login-menu__actions .language-btn {
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: white !important;
+  cursor: pointer !important;
+  transition: 300ms ease-in-out !important;
+  opacity: 0.7 !important;
+}
+.login-text__btn:hover, .login-component .login-menu__actions .language-btn:hover {
+  opacity: 1 !important;
+}
+.login-text__btn:active, .login-component .login-menu__actions .language-btn:active {
+  opacity: 0.7 !important;
 }
