--- a/Kori/LanguageSelector.razor.scss
+++ b/Kori/LanguageSelector.razor.scss
@@ -29,6 +29,7 @@
         width: 100%;
         margin-top: 8px;
         margin-right: -16px;
+        padding: 4px 0;
         padding-right: 16px;
     }
 
@@ -38,31 +39,53 @@
 
     button {
         width: 100%;
-        padding: 8px 12px;
+        padding: 4px 12px;
         background: none;
         border-radius: 4px;
-        color: white;
-        font-family: 'Encode Sans Semi Expanded';
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 160%;
-        color: var(--grey-50);
+        @extend .login-text__btn;
         text-align: left;
 
-        &:hover {
-            background: var(--grey-700) !important;
-        }
-
-        &:active {
-            background: var(--grey-800) !important;
-        }
-
         aside {
-            font-family: 'Encode Sans Expanded';
-            font-size: 12px;
-            font-weight: 400;
-            line-height: 160%;
-            color: var(--grey-300);
+            font-family: 'Encode Sans Semi Expanded' !important;
+            font-size: 12px !important;
+            font-weight: 400 !important;
+            line-height: 140% !important;
+            color: var(--grey-300) !important;
         }
+    }
+}
+
+.login-text__primary {
+    font-family: 'Encode Sans Semi Expanded' !important;
+    font-size: 16px !important;
+    font-weight: 400 !important;
+    line-height: 160% !important;
+    color: var(--grey-50) !important;
+}
+
+.login-text__secondary {
+    font-family: 'Encode Sans Semi Expanded' !important;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    line-height: 140% !important;
+    color: var(--grey-300) !important;
+}
+
+.login-text__btn {
+    font-family: 'Encode Sans Expanded' !important;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    line-height: 140% !important;
+    color: white !important;
+    cursor: pointer !important;
+    transition: 300ms ease-in-out !important;
+    opacity: 0.7 !important;
+
+    &:hover {
+        opacity: 1 !important;
+    }
+
+    &:active {
+        opacity: 0.7 !important;
     }
 }
